<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="600dp"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flags"
        android:layout_gravity="center"
        android:contentDescription="@string/share_img"/>

    <ImageView
        android:id="@+id/img_share"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:src="@drawable/default_cat"
        android:contentDescription="@string/share_img"/>

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:text="@string/app_name"/>

    <ImageView
        android:id="@+id/img_shareQR"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/share_QR"/>

</LinearLayout>
