<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<TextView
    android:id="@+id/title_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:drawableLeft="@drawable/icon_cross"
    android:drawableRight="@drawable/icon_share"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/crv_cii_bg"
            android:contentDescription="@string/share_img"/>
        <ImageView
            android:id="@+id/img_result"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/share_img"
            android:src="@drawable/medal" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/choose_item"
        />
</LinearLayout>
